# FARPStack

./: .gitignore  Readme.md
login_course/backend/: pyproject.toml
login_course/backend/app/: config.py  main.py
login_course/backend/app/explanations/: config.md
login_course/backend/app/model/: mixins.py  person.py  user_role.py  users.py
login_course/frontend/: package.json  pnpm-lock.yaml
login_course/frontend/src/: App.jsx
note_app/note_frontend/: index.html  package.json  pnpm-lock.yaml  test.html
note_app/note_frontend/src/: App.tsx  index.css
note_app/note_frontend/src/component/: Filter.tsx  Modal.tsx  Navbar.tsx  NoteCard.tsx  index.ts
note_app/note_frontend/src/layout/: MainLayout.tsx
note_app/note_frontend/src/pages/: AddNote.tsx  HomePage.tsx  index.ts
note_app/notes_backend/: db.sqlite3
note_app/notes_backend/notes_app/: admin.py  models.py  serializers.py  urls.py  views.py
note_app/notes_backend/notes_app/migrations/: 0001_initial.py
note_app/notes_backend/notes_backend/: settings.py  urls.py
story_teller/backend/: database.db  main.py
story_teller/backend/core/: config.py  models.py  prompts.py  story_generator.py
story_teller/backend/db/: database.py
story_teller/backend/models/: __init__.py  job.py  story.py
story_teller/backend/routers/: __init__.py  job.py  story.py
story_teller/backend/schemas/: __init__.py  job.py  story.py
story_teller/frontend/: package-lock.json
story_teller/frontend/src/components/: StoryGame.jsx
