[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["TabotCharlesBessong <ebezebeatrice@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.22.0"
fastapi = "^0.95.2"
sqlalchemy = "1.4.41"
asyncpg = "^0.27.0"
psycopg2 = "^2.9.6"
sqlmodel = "^0.0.8"
alembic = "^1.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
